   and 15 days, with these changes all result (graphics, tables, ...) are different
   depended if data as daily and how to print result (5,10,15 days) 
 * Now maps files (and maps, in the next release) for climate and forecasting
   are ordered and grouped based on analysis interval
 * Added 3 new variables independent (SSTA_CAR and AREA_WHWP) and one variable 
   dependent (RUNOFF)
 * Updated transform_data_stations script
 * add two new arguments: --disable-consistent-data and --disable-graphics

bugfixes:
 * bugfix the size data when set particular common period
 * fix TYPOS
 * fix when Jaziku detect language from system 
 * fix crash and memory overflow when open many file
 * check different cases to run data daily/monthly and analisis interval defined
 * fixed range interval for var I and different lags when data is daily and 
   result is in 5, 10 or 15 days
 * fixed constant value for var I when run case 2 (var_D daily and var_I monthly)
   for 5, 10 and 15 days 
 

0.2.1
 * change name function and filename results of Arithmetic Mean Trim to mean_trim


0.2.0

features/changes:
 * change numeration version
 * applied some PEP8 rules, fix typos and reorganize code
 * aplied color text in console information for errors, warnings and process 
 * final message with number of stations processed when Jaziku has finished
 * new argument input "-l" language selector, e.g. "-l es" 
 * show in terminal the run configuration
 * changes filename outputs for the results and some text inside files/graphics

bugfixes:
 * fix "Segmentation fault" in plt.close() using pyplot
 * show and info error when found wrong line or garbage character in input files
 * fix crash when the name or number from files (station list and files 
   variables input) contain spaces or tabs at the start or/and final of this.
 * fix memory leak using pyplot library    
 * fix several strings messages, correct to translate after install, translation
   works now.
 